--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PraWater</title>
     <link rel="stylesheet" href="/style.css">
-    <!-- <script defer src="main.js"></script> -->
   </head>
   <body>
     <form>
-      <input type="text" id="number" name="number" />
-      <input type="submit" onclick="window.location = window.location + 'src/' + number.value + '/index.html'; return false;"/>
+      <input class="in" type="text" id="number" name="number" placeholder="Enter a number from 1 to 15"/>
+      <button type="submit" class="subbu" onclick="window.location = window.location + 'src/' + number.value + '/index.html'; return false;">Go</button>
       </form>
   </body>
 </html>
