--- a/src/1/index.html
+++ b/src/1/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Effect</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../back.css">
     <script defer src="script.js"></script>
 </head>
 <body>
-    <span class="container">
-        <h1>PRANEEL MADDULA</h1>
-    </span>
+    <button class="back" onclick="history.back()"><img src="../arrow.png" alt="back"/></button>
+    <h1>PRANEEL MADDULA</h1>
 </body>
 </html>
